static/css/bootstrap-subset.css
:root {
  --lightgray: #d3d3d3;
  --gray: #6c757d;
  --darkgray: #343a40;
  --black: #0d1117;
  --white: #f0f6fc;
  --real-white: #ffffff;
  --blue-lighter: #5ea1f7;
  --blue-darker: #0051a8;
  --purple-lighter: #b38af9;
  --purple-darker: #474181;
  --orange-lighter: #ffddb3;
  --orange-darker: #611800;
  /* disallows scrolling up higher than the top of the page */
  overscroll-behavior-y: none;
}

html {
  min-height: 0vw;
  font-size: 1rem;
  line-height: 1.5;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

body {
  /* ensures that content fills the entirety of the page with no margin */
  margin: 0;
}

.col {
  /* display columns in blocks, with content taking up 100% of the space */
  display: block;
  width: 100%;
  position: relative;
  padding-right: 15px;
  padding-left: 15px;
}

footer {
  /* footers should have vertical padding */
  padding: 1rem;
  text-align: center;
}

a {
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}

hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
  margin-top: 1rem;
  margin-bottom: 1rem;
  border: 0;
}

nav {
  position: relative;
  justify-content: flex-start;
  margin: 0;
}

.nav-link {
  padding: 0rem;
}

.top-level-header {
  padding: 1rem 2rem 0rem 2rem;
  display: block;
  font-size: 29px;
}

/* default dark mode colours! */
html {
  background: var(--black);
  color: var(--white);
}
a {
  color: var(--blue-lighter);
}
a.skipnav {
  background-color: var(--white);
  color: var(--black);
}
hr {
  border-top: 1px solid var(--darkgray);
}
p {
  font-weight: 300;
}
b,
strong {
  font-weight: 800;
  color: inherit;
}
paper {
  padding: 0.5em 0.5em 0.5em;
  overflow: auto;
  display: block;
  border-color: var(--real-white);
  border-width: 3px;
  border-style: dotted;
  margin: 0em 2em 1em 2em;
}

g {
  color: #25b631;
}
r {
  color: #fc7375;
}
mark {
  display: inline-block;
  background-color: yellow;
  padding: 2px;
  color: black;
  font-weight: normal;
}

@media (prefers-color-scheme: light) {
  html {
    background: var(--white);
    color: var(--black);
  }
  a {
    color: var(--blue-darker);
  }
  a.skipnav {
    background-color: var(--black);
    color: var(--white);
  }
  hr {
    border-top: 1px solid var(--lightgray);
  }
  p {
    font-weight: 400;
  }
  b,
  strong {
    font-weight: 700;
    color: inherit;
  }
  paper {
    border-color: var(--black);
  }
  g {
    color: #15661c;
  }
  r {
    color: #ad1a00;
  }
}

.ipa-pronunciation {
  font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva, Verdana,
    sans-serif;
}

button {
  border-radius: 0;
}

button:focus {
  outline: 1px dotted;
  outline: 5px auto -webkit-focus-ring-color;
}

button,
input,
optgroup,
select,
textarea {
  margin: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}

button,
input {
  overflow: visible;
}

button,
select {
  text-transform: none;
}

[type="button"]:not(:disabled),
[type="reset"]:not(:disabled),
[type="submit"]:not(:disabled),
button:not(:disabled) {
  cursor: pointer;
}

.container {
  width: 100%;
  padding-right: 30px;
  padding-left: 30px;
  margin-right: auto;
  margin-left: auto;
  max-width: 1040px;
}

.row {
  display: flex;
  flex-wrap: wrap;
  margin-right: -15px;
  margin-left: -15px;
}

article,
aside,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section,
pre {
  display: block;
}

figure {
  margin: 0 0 1rem;
  text-align: center;
}

.img-fluid {
  max-width: 100%;
  height: auto;
}

img {
  vertical-align: middle;
  border-style: none;
}

.mr-auto,
.mx-auto {
  margin-right: auto !important;
}

.ml-auto,
.mx-auto {
  margin-left: auto !important;
}

.col-md-8 {
  flex: 1 1 660px !important;
}

.col-md-4 {
  flex: 1 1 290px !important;
}

*,
::after,
::before {
  box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 0;
  margin-bottom: 0.5rem;
  font-weight: 500;
  line-height: 1.2;
}

h1 {
  font-size: 2.25rem;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.75rem;
}

p,
pre {
  margin-top: 0;
  margin-bottom: 1rem;
}

pre {
  margin-top: 0;
  margin-bottom: 1rem;
  overflow: auto;
  -ms-overflow-style: scrollbar;
  align-self: center;
}

dl,
ol,
ul {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.table-of-contents {
  padding: 0 !important;
  margin-bottom: 1rem;
}
.table-of-contents ul {
  margin-bottom: 0 !important;
}
.centred {
  text-align: center;
}

table {
  border-spacing: 0px;
  margin-right: auto;
  margin-left: auto;
  margin-top: 1rem;
  margin-bottom: 1rem;
  max-width: 95%;
}

td {
  border-bottom: 0.5px solid;
  padding: 9px;
}

th {
  text-align: center !important;
  border-top: 2px solid;
  border-bottom: 2px solid;
  padding: 9px;
}

/* skipnav styling courtesy of https://www.a11yproject.com/ */

.skipnav {
  /* clip it so that none of it shows and it's all hidden away before the user tabs */
  clip-path: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  padding: 1rem 2rem;
  /* looks smooth and fancy  */
  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
}

.skipnav:focus {
  /* make it visible */
  clip-path: none;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
  outline: none;
  position: absolute;
  top: 6rem;
  left: 2rem;
  /* position it over anything else that's underneath */
  z-index: 10;
}

.postlist {
  list-style: none;
  padding: 0;
}
.postlist-item {
  line-height: 1.8;
}
.postlist-item:before {
  content: "" attr(value) ". ";
  display: inline-block;
  pointer-events: none;
  line-height: 100%;
  text-align: right;
}
.postlist-date,
.postlist-item:before {
  font-size: 0.8125em; /* 13px /16 */
}
.postlist-date {
  word-spacing: -0.5px;
  margin-right: 0.6666666666667em; /* 8px /12 */
}
.postlist-link {
  padding-left: 0.3em;
  padding-right: 0.3em;
  text-underline-position: from-font;
  text-underline-offset: 0;
  text-decoration-thickness: 1px;
}
.postlist-item-active .postlist-link {
  font-weight: bold;
}
.container .postlist-link {
  font-size: 1.1875em; /* 19px /16 */
  font-weight: 700;
  text-decoration: underline;
}
.postlist-item > .post-tag {
  align-self: center;
}
.post-tag {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  text-transform: uppercase;
  font-size: 0.75em; /* 12px /16 */
  padding: 0.08333333333333em 0.3333333333333em; /* 1px 4px /12 */
  border-radius: 0.25em; /* 3px /12 */
  text-decoration: none;
}

a[href].post-tag,
a[href].post-tag:visited {
  color: inherit;
}

.postlist-date,
.postlist-item:before {
  color: var(--lightgray);
}
.post-tag {
  color: var(--lightgray);
  border: 1px solid var(--gray);
}
a[href].post-tag:hover,
a[href].post-tag:focus {
  background-color: var(--darkgray);
}
a.postlist-link:visited {
  color: var(--purple-lighter);
}

.highlight-author {
  font-weight: bold;
  color: var(--orange-lighter);
}

@media (prefers-color-scheme: light) {
  .postlist-date,
  .postlist-item:before {
    color: var(--darkgray);
  }
  .post-tag {
    color: var(--darkgray);
    border: 1px solid var(--gray);
  }
  a[href].post-tag:hover,
  a[href].post-tag:focus {
    background-color: var(--lightgray);
  }
  a.postlist-link:visited {
    color: var(--purple-darker);
  }
  .highlight-author {
    color: var(--orange-darker);
  }
}

.wide-spaced-list > li + li {
  margin-top: 10px;
}

#showSelectedPapers:checked ~ ol > :not(.highlight) {
  display: none;
}

